--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,15 @@
-html,
+@import '~@douyinfe/semi-ui/dist/css/semi.min.css';
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    box-sizing: border-box;
+    background-color: rgb(244, 245, 245);
+    margin: 0 !important;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+.white-back-box {
+    border-radius: 5px;
+    margin: 8px;
+    padding: 20px;
+    background-color: #fff;
+    border: 2px solid #fff;
 }
