--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,11 @@ body {
     background-color: #fff;
     border: 2px solid #fff;
 }
+
+.can-click {
+    cursor: pointer;
+}
+
+.can-click:hover {
+    background-color: #999999;
+}
