--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 @import '~@douyinfe/semi-ui/dist/css/semi.min.css';
-
+@import '~antd/dist/antd.css';
 body {
     box-sizing: border-box;
     background-color: rgb(244, 245, 245);
